--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>
         Home Page
@@ -9,8 +10,8 @@
 </head>
 
 <body>
-    <header class="Meee">
-        <h1 style="color:rgba(255, 255, 255, 0.788);">Waiting For My Glow Up<img src="hope.png" alt="Glow Up">
+    <header class="Meee">p
+        <h1 style="color:rgba(255, 255, 255, 0.788);"><strong>Waiting For My Glow Up</strong><img src="hope.png" alt="Glow Up">
             <br><span>-The Story Of My Life:)</span>
         </h1>
 
@@ -21,7 +22,7 @@
     </section>
     <nav class="navigation">
         <ul>
-            <li id="Home"><a href="index.html">Home</a>
+            <li id="Home"><a href="index.html" style="color: red;"><b>Home</b></a>
             <li><a href="#bodyy">About Me</a>
             <li><a href="Gallery.html">Gallery</a>
             <li><a href="#Contact">Contact</a>
