--- a/index.html
+++ b/index.html
@@ -32,22 +32,32 @@
 
 
     <div id="bodyy">
-        <div id="Intro">
-            <p id="Thought">"I am a mosaic of everyone I've ever loved, even for a heartbeat."</p><br>
+        <div id="Intro"><br><br>
+            <p id="Thought">"I am a mosaic of everyone I've ever loved, even for a heartbeat."</p><br><br>
             Hey there,<br>My name is <span style="color: tomato;font-size: 2em;">Vedant Tarole.</span>
-            I am first year undergradute student at <b><em>Indian Institue of Technology,Kharagpur</em></b> in the
+            I am Freshman Year undergradute student at <b style="color: tomato;font size:1.2em"><em>Indian Institue of Technology,Kharagpur</em></b> in the
             department of Industrial and Systems
             Engineering enrolled in it's
             dual degree course.<br><br>
-            I am Associate Member at <a href="https://www.facebook.com/barciitkgp/"
-                style="text-decoration: none;font-style:italic;color: red;">
-                Branding and Relations Cell(BARC),IIT Kharagpur</a>.<br><br>
-            I am boarder of Lal Bahadur Shastri Hall of residence.<br><br>
-            I was born in Amravati,Maharashtra. I have done my schooling from School Of Scholars, Amravati.
-            I secured 84% in my 12th board examination and 90% in my 10th board examination.
+            I am Associate Member(hoping to become Web Team Member soon) at<a href="https://www.facebook.com/barciitkgp/" style="text-decoration: none;font-style:unset;color: red;font-size: 1.2em;">Branding and Relations Cell(BARC),IIT Kharagpur
+            <span style="color:green;font-size: 0.8em;">(Click please)</span></a>.<br><br>
+            I am boarder of Lal Bahadur Shastri Hall of Residence.<br><br>
+            I am from small town Amravati, it's in Maharashtra. I have done my preparation for IIT-JEE at <b>IIT-Home,Nagpur</b>.
+            <br><br>
+            <strong style="font-size: 1.5em;color:darkblue;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            text-decoration: underline;">Hobbies:</strong>
+            <ul>
+                <li>Playing Cricket,Chess and Football</li>
+                <li>Web Development</li>
+                <li>Coding in C-Language</li>
+                <li>Cycling</li>
+                <li>Gym</li>
+            </ul>
 
         </div>
         <footer>
+            <b style="font-size: 2em;color:darkorchid;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            text-decoration: underline;">Find Me Here:</b>
             <div id="Contact" style="display:inline-block;">
                 <div class="flex-container">
                     <div class="box">
@@ -69,7 +79,10 @@
                 </div>
 
             </div>
-            <p>© A Vedant Tarole Production</p>
+            
+            <p>
+                Site Last Updated:30th March,2021<br>
+                © A Vedant Tarole Production</p>
         </footer>
     </div>
 
