--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <div id="Intro"><br><br>
             <p id="Thought">"I am a mosaic of everyone I've ever loved, even for a heartbeat."</p><br><br>
             Hey there,<br>My name is <span style="color: tomato;font-size: 2em;">Vedant Tarole.</span>
-            I am Freshman Year undergradute student at <b style="color: tomato;font size:1.2em"><em>Indian Institue of Technology,Kharagpur</em></b> in the
-            department of Industrial and Systems
-            Engineering enrolled in it's
+            I am Freshman Year undergradute student at <b style="color: tomato;font size:1.2em"><em>Indian Institute of Technology,Kharagpur</em></b> in the
+            department of <b>Industrial and Systems
+            Engineering</b>I enrolled in it's
             dual degree course.<br><br>
             I am Associate Member(hoping to become Web Team Member soon) at<a href="https://www.facebook.com/barciitkgp/" style="text-decoration: none;font-style:unset;color: red;font-size: 1.2em;">Branding and Relations Cell(BARC),IIT Kharagpur
             <span style="color:green;font-size: 0.8em;">(Click please)</span></a>.<br><br>
